k8s/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: miappdevops-metrics
  labels:
    app: miappdevops
spec:
  selector:
    app: miappdevops
  ports:
  - name: metrics
    port: 5000
    targetPort: 5000
